<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado"
    tools:context=".Calcularimc">

    <TextView
        android:id="@+id/saludo"
        android:layout_width="225dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/saludo"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:shadowRadius="@integer/material_motion_duration_medium_2"
        android:text="@string/recorre"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="101dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/baila"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="386dp"
        android:layout_height="444dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/bascula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="ContentDescription,MissingConstraints" />
    <!--
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="62dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.36"
        tools:ignore="MissingConstraints" /> -->

    <EditText
        android:id="@+id/Peso"
        android:layout_width="242dp"
        android:layout_height="47dp"
        android:background="@drawable/edit_text_bd"
        android:ems="10"
        android:hint="@string/peso_kg"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.463"
        tools:ignore="Autofill,MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/Altura"
        android:layout_width="242dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_bd"
        android:ems="10"
        android:hint="@string/altura_m"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Peso"
        tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/botonCalcular"
        android:layout_width="77dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:background="@mipmap/start"
        android:onClick="CalcularImc"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.865"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/volver"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:layout_margin="10dp"
        android:background="@mipmap/volver"
        android:onClick="BotonVolver"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/botonCalcular"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.865"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>